Bug 1735667 - Make delegatesFocus to loop through descendents of slotted elements. r=emilio, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D128424